--- a/app/src/main/res/layout/activity_grid__input_page.xml
+++ b/app/src/main/res/layout/activity_grid__input_page.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".Gird_InputPage">
+    android:orientation="vertical">
     <GridLayout
         android:layout_margin="25dp"
         android:layout_width="400dp"
