--- a/app/src/main/res/layout/activity_grid_display_page.xml
+++ b/app/src/main/res/layout/activity_grid_display_page.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Button
+            android:id="@+id/SaveSudokuGrid"
             android:layout_width="wrap_content"
             android:text="Save Grid"
             android:layout_height="wrap_content"
